Added color styling for main page and new book form

--- a/styles/form.css
+++ b/styles/form.css
@@ -19,9 +19,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* bottom: 0; */
+  /* right: 15px; */
+  border: 3px solid #3f3f46;
   z-index: 9;
 }
 
@@ -29,7 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-container {
   max-width: 300px;
   padding: 10px;
-  background-color: white;
+  background-color: #3f3f46;
 }
 
 /* Full-width input fields */
@@ -38,7 +41,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #f1f1f1;
+  background: #a1a1aa;
 }
 
 /* When the inputs get focus, do something */
@@ -69,6 +72,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
   opacity: 1;
 }
 
+/* Margin for radio fieldset */
 .form-container > fieldset {
     margin: 5px 0 22px 0;
+}
+
+/* Text color */
+.form-container label, .form-container > h1, .form-container legend {
+  color: #e4e4e7;
 }
