--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,34 @@
+body {
+    margin: 0;
+}
+
 .container {
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
 }
 
+header, footer {
+    background-color: #831843;
+}
+
 header {
+    position: relative;
+    z-index: 1;
     grid-row: 1;
+    box-shadow: 0 5px 5px 0px #f43f5e;
 }
 
 footer {
     grid-row: 3;
+    text-align: center;
+    padding: 40px;
 }
 
 #book-section {
+    background-color: #fda4af;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-auto-rows: 200px;
     gap: 8px;
     padding: 3rem 3rem;
@@ -23,5 +37,9 @@ footer {
 
 .card {
     border: 1px solid lightcoral;
-    padding: 32px 24px;
+    padding: 32px 32px;
+}
+
+.card p {
+    margin-top: 0;
 }
