Updated color theme of the webpage

--- a/styles/form.css
+++ b/styles/form.css
@@ -24,7 +24,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   transform: translate(-50%, -50%);
   /* bottom: 0; */
   /* right: 15px; */
-  border: 3px solid #3f3f46;
+  border: 3px solid #C7395F;
   z-index: 9;
 }
 
@@ -32,7 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-container {
   max-width: 300px;
   padding: 10px;
-  background-color: #3f3f46;
+  background-color: #C7395F;
 }
 
 /* Full-width input fields */
@@ -41,7 +41,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: #a1a1aa;
+  background: #DED4E8;
 }
 
 /* When the inputs get focus, do something */
@@ -79,5 +79,5 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Text color */
 .form-container label, .form-container > h1, .form-container legend {
-  color: #e4e4e7;
+  color: #E8BA40;
 }
