Moved button to add a new book into the sidebar

--- a/styles/form.css
+++ b/styles/form.css
@@ -9,10 +9,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
+  /* position: fixed; */
+  /* bottom: 23px; */
+  /* right: 28px; */
+  width: 150px;
+  margin-top: 12px;
 }
 
 /* The popup form - hidden by default */
