--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ header {
     grid-row: 1;
     box-shadow: 0 5px 5px 0px #f43f5e;
     width: 200px;
+    text-align: center;
 }
 
 header > h1 {
@@ -34,9 +35,9 @@ footer {
 #book-section {
     background-color: #DED4E8;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 200px;
-    gap: 8px;
+    gap: 24px;
     padding: 3rem 3rem;
     justify-items: center;
 }
