Added a toggle switch for read book property to display if a book as been read or not

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,5 @@
+/* These pop-up form CSS properties and associated HTML were taken from https://www.w3schools.com/howto/howto_js_popup_form.asp */
+
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
