--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,8 @@ footer {
     background-color: #DED4E8;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: 200px;
-    gap: 24px;
+    grid-auto-rows: 270px;
+    gap: 24px 24px;
     padding: 3rem 3rem;
     justify-items: center;
 }
@@ -47,10 +47,11 @@ footer {
     background-color: #E8BA40;
     border: 1px solid #E8BA40;
     padding: 24px 24px;
-    height: 200px;
+    height: 270px;
     width: 250px;
     -webkit-box-shadow: 6px 3px 15px 1px #aaaaaa;
     box-shadow: 6px 3px 15px 1px #aaaaaa;
+    display: grid;
 }
 
 .card p {
@@ -67,4 +68,20 @@ footer {
 
 .toggle > p {
     margin: 0;
+}
+
+.delete-book-btn {
+    background-color: red;
+    color: white;
+    width: 60px;
+    padding: 3px 6px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    margin-top: 8px;
+}
+
+.delete-book-container {
+    align-self: end;
+    justify-self: right;
 }
